# stac-fastapi-catalogs-extension

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
stac_fastapi_catalogs_extension/: __init__.py  catalogs.py  client.py  types.py
tests/: test_catalogs.py
